Remove ubuntu specific code